--- a/index.html
+++ b/index.html
@@ -1,194 +1,172 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-   <head>
-      <meta charset="utf-8">
-      <title>Social Media Icons | Mnmyounus</title>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-      <style>
-         @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Social Media Icons | Mnmyounus</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+   <style>
+      @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
-         * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
+      * {
+         margin: 0;
+         padding: 0;
+         box-sizing: border-box;
+         font-family: 'Poppins', sans-serif;
+      }
+
+      html, body {
+         height: 100%;
+         width: 100%;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         background: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
+      }
+
+      .wrapper {
+         display: flex;
+         flex-wrap: wrap;
+         justify-content: center;
+         width: 90%;
+         max-width: 800px;
+      }
+
+      .button {
+         display: inline-block;
+         height: 60px;
+         width: 60px;
+         margin: 10px;
+         background: #fff;
+         border-radius: 50px;
+         cursor: pointer;
+         box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+         transition: all 0.3s ease-out;
+         text-align: center;
+         overflow: hidden;
+      }
+
+      .button .icon {
+         height: 100%;
+         width: 100%;
+         line-height: 60px;
+         transition: all 0.3s ease-out;
+         font-size: 25px;
+      }
+
+      .button span {
+         display: none;
+         font-size: 16px;
+         color: #fff;
+         line-height: 60px;
+         transition: all 0.3s ease-out;
+      }
+
+      .button:hover {
+         width: 160px;
+      }
+
+      .button:hover span {
+         display: inline-block;
+      }
+
+      .button .icon img {
+         height: 25px;
+         vertical-align: middle;
+      }
+
+      /* Social Media Colors */
+      .button:nth-child(1) { background: #E1306C; }
+      .button:nth-child(2) { background: #4267B2; }
+      .button:nth-child(3) { background: #1DA1F2; }
+      .button:nth-child(4) { background: #333; }
+      .button:nth-child(5) { background: #FFFC00; color: #000; }
+      .button:nth-child(6) { background: #A6CE39; }
+      .button:nth-child(7) { background: #000; }
+      .button:nth-child(8) { background: #35465C; }
+      .button:nth-child(9) { background: #F57D00; }
+      .button:nth-child(10) { background: #000; }
+      .button:nth-child(11) { background: #0A0A0A; }
+      .button:nth-child(12) { background: #BD081C; }
+
+      /* Responsive Design */
+      @media (max-width: 768px) {
+         .button {
+            height: 50px;
+            width: 50px;
          }
-
-         html,
-         body {
-            display: grid;
-            height: 100%;
-            width: 100%;
-            place-items: center;
-            background: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
-         }
-
-         .wrapper .button {
-            display: inline-block;
-            height: 60px;
-            width: 60px;
-            float: left;
-            text-decoration: none;
-            margin: 0 5px;
-            overflow: hidden;
-            background: #fff;
-            border-radius: 50px;
-            cursor: pointer;
-            box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease-out;
-         }
-
-         .wrapper .button:hover {
-            width: 200px;
-         }
-
-         .wrapper .button .icon {
-            display: inline-block;
-            height: 60px;
-            width: 60px;
-            color: #000;
-            text-align: center;
-            border-radius: 50px;
-            box-sizing: border-box;
-            line-height: 60px;
-            transition: all 0.3s ease-out;
-         }
-
-         .wrapper .button .icon i {
-            font-size: 25px;
-            line-height: 60px;
-            transition: all 0.3s ease-out;
-         }
-
-         .wrapper .button:hover .icon i {
-            color: #fff;
-         }
-
-         .wrapper .button span {
+         .button .icon {
             font-size: 20px;
-            font-weight: 500;
-            line-height: 60px;
-            margin-left: 10px;
-            transition: all 0.3s ease-out;
+            line-height: 50px;
          }
-
-         .wrapper .button:nth-child(1):hover .icon {
-            background: #4267B2;
+         .button span {
+            font-size: 14px;
          }
+      }
+   </style>
+</head>
+<body>
+   <div class="wrapper">
+      <!-- Buttons -->
+      <a href="https://www.instagram.com/mnmyounus/" class="button" onclick="handleClick(this, 'Instagram')">
+         <div class="icon"><i class="fab fa-instagram"></i></div>
+         <span>Instagram</span>
+      </a>
+      <a href="https://facebook.com/" class="button" onclick="handleClick(this, 'Facebook')">
+         <div class="icon"><i class="fab fa-facebook-f"></i></div>
+         <span>Facebook</span>
+      </a>
+      <a href="https://x.com/mnmyounus" class="button" onclick="handleClick(this, 'Twitter')">
+         <div class="icon"><i class="fab fa-twitter"></i></div>
+         <span>Twitter</span>
+      </a>
+      <a href="https://github.com/mnmyounus" class="button" onclick="handleClick(this, 'GitHub')">
+         <div class="icon"><i class="fab fa-github"></i></div>
+         <span>GitHub</span>
+      </a>
+      <a href="https://www.snapchat.com/add/mnmyounus" class="button" onclick="handleClick(this, 'Snapchat')">
+         <div class="icon"><i class="fab fa-snapchat"></i></div>
+         <span>Snapchat</span>
+      </a>
+      <a href="https://orcid.org/0009-0003-4555-5683" class="button" onclick="handleClick(this, 'ORCID')">
+         <div class="icon"><i class="fas fa-id-card"></i></div>
+         <span>ORCID</span>
+      </a>
+      <a href="https://www.tiktok.com/@mnmyounus" class="button" onclick="handleClick(this, 'TikTok')">
+         <div class="icon"><i class="fab fa-tiktok"></i></div>
+         <span>TikTok</span>
+      </a>
+      <a href="https://www.tumblr.com/mnmyounus" class="button" onclick="handleClick(this, 'Tumblr')">
+         <div class="icon"><i class="fab fa-tumblr"></i></div>
+         <span>Tumblr</span>
+      </a>
+      <a href="https://www.blogger.com/profile/00802157145964760570" class="button" onclick="handleClick(this, 'Blogger')">
+         <div class="icon"><i class="fab fa-blogger"></i></div>
+         <span>Blogger</span>
+      </a>
+      <a href="https://www.threads.net/@mnmyounus" class="button" onclick="handleClick(this, 'Threads')">
+         <div class="icon"><img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Threads_app_logo.png" alt="Threads"></div>
+         <span>Threads</span>
+      </a>
+      <a href="https://dev.to/mnmyounus" class="button" onclick="handleClick(this, 'Dev.to')">
+         <div class="icon"><i class="fab fa-dev"></i></div>
+         <span>Dev.to</span>
+      </a>
+      <a href="https://pinterest.com/mnmyounus1" class="button" onclick="handleClick(this, 'Pinterest')">
+         <div class="icon"><i class="fab fa-pinterest"></i></div>
+         <span>Pinterest</span>
+      </a>
+   </div>
 
-         .wrapper .button:nth-child(2):hover .icon {
-            background: #1DA1F2;
+   <script>
+      function handleClick(button, platformName) {
+         if (!button.dataset.clicked) {
+            button.dataset.clicked = true;
+            alert(`Selected: ${platformName}`);
+         } else {
+            window.open(button.href, '_blank');
          }
-
-         .wrapper .button:nth-child(3):hover .icon {
-            background: #E1306C;
-         }
-
-         .wrapper .button:nth-child(4):hover .icon {
-            background: #333;
-         }
-
-         .wrapper .button:nth-child(5):hover .icon {
-            background: #FFFC00;
-         }
-
-         .certificates, .additional-links {
-            margin-top: 20px;
-         }
-
-         .certificates a, .additional-links a {
-            text-decoration: none;
-            display: block;
-            margin: 5px 0;
-            color: #007BFF;
-            font-size: 18px;
-         }
-
-         .certificates a:hover, .additional-links a:hover {
-            text-decoration: underline;
-         }
-      </style>
-   </head>
-   <body>
-      <div class="wrapper">
-         <a href="https://www.instagram.com/mnmyounus/" class="button">
-            <div class="icon">
-               <i class="fab fa-instagram"></i>
-            </div>
-            <span>Instagram</span>
-         </a>
-         <a href="https://facebook.com/" class="button">
-            <div class="icon">
-               <i class="fab fa-facebook-f"></i>
-            </div>
-            <span>Facebook</span>
-         </a>
-         <a href="https://x.com/mnmyounus" class="button">
-            <div class="icon">
-               <i class="fab fa-twitter"></i>
-            </div>
-            <span>Twitter</span>
-         </a>
-         <a href="https://github.com/mnmyounus" class="button">
-            <div class="icon">
-               <i class="fab fa-github"></i>
-            </div>
-            <span>GitHub</span>
-         </a>
-         <a href="https://www.snapchat.com/add/mnmyounus" class="button">
-            <div class="icon">
-               <i class="fab fa-snapchat"></i>
-            </div>
-            <span>Snapchat</span>
-         </a>
-         <a href="https://orcid.org/0009-0003-4555-5683" class="button">
-            <div class="icon">
-               <i class="fas fa-id-card"></i>
-            </div>
-            <span>ORCID</span>
-         </a>
-         <a href="https://www.tiktok.com/@mnmyounus" class="button">
-            <div class="icon">
-               <i class="fab fa-tiktok"></i>
-            </div>
-            <span>TikTok</span>
-         </a>
-         <a href="https://www.tumblr.com/mnmyounus" class="button">
-            <div class="icon">
-               <i class="fab fa-tumblr"></i>
-            </div>
-            <span>Tumblr</span>
-         </a>
-         <a href="https://www.blogger.com/profile/00802157145964760570" class="button">
-            <div class="icon">
-               <i class="fab fa-blogger"></i>
-            </div>
-            <span>Blogger</span>
-         </a>
-         <a href="https://www.threads.net/@mnmyounus" class="button">
-            <div class="icon">
-               <i class="fas fa-thread"></i>
-            </div>
-            <span>Threads</span>
-         </a>
-         <a href="https://dev.to/mnmyounus" class="button">
-            <div class="icon">
-               <i class="fab fa-dev"></i>
-            </div>
-            <span>Dev.to</span>
-         </a>
-         <a href="https://pinterest.com/mnmyounus1" class="button">
-            <div class="icon">
-               <i class="fab fa-pinterest"></i>
-            </div>
-            <span>Pinterest</span>
-         </a>
-      </div>
-
-      <div class="certificates">
-         <h2>Certificates</h2>
-         <a href="https://www.skillshare.com/en/user/mnmyounus">Skillshare Profile</a>
-         <a href="https://www.open.edu/openlearn/profiles/zs316476">OpenLearn Profile</a>
-      </div>
-   </body>
+      }
+   </script>
+</body>
 </html>
