--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
          vertical-align: middle;
       }
 
-      /* Social Media Colors */
-      .button:nth-child(1) { background: #E1306C; }
-      .button:nth-child(2) { background: #4267B2; }
-      .button:nth-child(3) { background: #1DA1F2; }
-      .button:nth-child(4) { background: #333; }
-      .button:nth-child(5) { background: #FFFC00; color: #000; }
-      .button:nth-child(6) { background: #A6CE39; }
-      .button:nth-child(7) { background: #000; }
-      .button:nth-child(8) { background: #35465C; }
-      .button:nth-child(9) { background: #F57D00; }
-      .button:nth-child(10) { background: #000; }
-      .button:nth-child(11) { background: #0A0A0A; }
-      .button:nth-child(12) { background: #BD081C; }
+      /* Social Media Colors (real colors) */
+      .button.instagram { background: #E1306C; }
+      .button.facebook { background: #4267B2; }
+      .button.twitter { background: #1DA1F2; }
+      .button.github { background: #333; }
+      .button.snapchat { background: #FFFC00; color: #000; }
+      .button.orcid { background: #A6CE39; }
+      .button.tiktok { background: #000; }
+      .button.tumblr { background: #35465C; }
+      .button.blogger { background: #F57D00; }
+      .button.threads { background: #0A0A0A; }
+      .button.devto { background: #BD081C; }
+      .button.pinterest { background: #F50057; }
 
       /* Certificates Section */
       .certificates-wrapper {
@@ -102,8 +102,8 @@
       }
 
       /* Certificates Colors */
-      .button:nth-child(13) { background: #39A2DB; } /* Skillshare */
-      .button:nth-child(14) { background: #EE6F57; } /* Open University */
+      .button.skillshare { background: #39A2DB; } /* Skillshare */
+      .button.openuniversity { background: #EE6F57; } /* Open University */
 
       /* Responsive Design */
       @media (max-width: 768px) {
@@ -124,53 +124,53 @@
 <body>
    <div class="wrapper">
       <!-- Social Media Buttons -->
-      <a href="https://www.instagram.com/mnmyounus/" class="button" onclick="handleClick(this, 'Instagram')">
+      <a href="https://www.instagram.com/mnmyounus/" class="button instagram" onclick="handleClick(this, 'Instagram')">
          <div class="icon"><i class="fab fa-instagram"></i></div>
          <span>Instagram</span>
       </a>
-      <a href="https://facebook.com/" class="button" onclick="handleClick(this, 'Facebook')">
+      <a href="https://facebook.com/" class="button facebook" onclick="handleClick(this, 'Facebook')">
          <div class="icon"><i class="fab fa-facebook-f"></i></div>
          <span>Facebook</span>
       </a>
-      <a href="https://x.com/mnmyounus" class="button" onclick="handleClick(this, 'Twitter')">
+      <a href="https://x.com/mnmyounus" class="button twitter" onclick="handleClick(this, 'Twitter')">
          <div class="icon"><i class="fab fa-twitter"></i></div>
          <span>Twitter</span>
       </a>
-      <a href="https://github.com/mnmyounus" class="button" onclick="handleClick(this, 'GitHub')">
+      <a href="https://github.com/mnmyounus" class="button github" onclick="handleClick(this, 'GitHub')">
          <div class="icon"><i class="fab fa-github"></i></div>
          <span>GitHub</span>
       </a>
-      <a href="https://www.snapchat.com/add/mnmyounus" class="button" onclick="handleClick(this, 'Snapchat')">
+      <a href="https://www.snapchat.com/add/mnmyounus" class="button snapchat" onclick="handleClick(this, 'Snapchat')">
          <div class="icon"><i class="fab fa-snapchat"></i></div>
          <span>Snapchat</span>
       </a>
-      <a href="https://orcid.org/0009-0003-4555-5683" class="button" onclick="handleClick(this, 'ORCID')">
+      <a href="https://orcid.org/0009-0003-4555-5683" class="button orcid" onclick="handleClick(this, 'ORCID')">
          <div class="icon"><i class="fas fa-id-card"></i></div>
          <span>ORCID</span>
       </a>
-      <a href="https://www.tiktok.com/@mnmyounus" class="button" onclick="handleClick(this, 'TikTok')">
+      <a href="https://www.tiktok.com/@mnmyounus" class="button tiktok" onclick="handleClick(this, 'TikTok')">
          <div class="icon"><i class="fab fa-tiktok"></i></div>
          <span>TikTok</span>
       </a>
-      <a href="https://www.tumblr.com/mnmyounus" class="button" onclick="handleClick(this, 'Tumblr')">
+      <a href="https://www.tumblr.com/mnmyounus" class="button tumblr" onclick="handleClick(this, 'Tumblr')">
          <div class="icon"><i class="fab fa-tumblr"></i></div>
          <span>Tumblr</span>
       </a>
-      <a href="https://www.blogger.com/profile/00802157145964760570" class="button" onclick="handleClick(this, 'Blogger')">
+      <a href="https://www.blogger.com/profile/00802157145964760570" class="button blogger" onclick="handleClick(this, 'Blogger')">
          <div class="icon"><i class="fab fa-blogger"></i></div>
          <span>Blogger</span>
       </a>
-      <a href="https://www.threads.net/@mnmyounus" class="button" onclick="handleClick(this, 'Threads')">
+      <a href="https://www.threads.net/@mnmyounus" class="button threads" onclick="handleClick(this, 'Threads')">
          <div class="icon">
             <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Threads_app_logo.png" alt="Threads Logo" />
          </div>
          <span>Threads</span>
       </a>
-      <a href="https://dev.to/mnmyounus" class="button" onclick="handleClick(this, 'Dev.to')">
+      <a href="https://dev.to/mnmyounus" class="button devto" onclick="handleClick(this, 'Dev.to')">
          <div class="icon"><i class="fab fa-dev"></i></div>
          <span>Dev.to</span>
       </a>
-      <a href="https://pinterest.com/mnmyounus1" class="button" onclick="handleClick(this, 'Pinterest')">
+      <a href="https://pinterest.com/mnmyounus1" class="button pinterest" onclick="handleClick(this, 'Pinterest')">
          <div class="icon"><i class="fab fa-pinterest"></i></div>
          <span>Pinterest</span>
       </a>
@@ -179,11 +179,11 @@
    <!-- Certificates Section -->
    <div class="certificates-wrapper">
       <!-- Certificates Buttons -->
-      <a href="https://www.skillshare.com/en/user/mnmyounus" class="button" onclick="handleClick(this, 'Skillshare')">
+      <a href="https://www.skillshare.com/en/user/mnmyounus" class="button skillshare" onclick="handleClick(this, 'Skillshare')">
          <div class="icon"><i class="fab fa-skillshare"></i></div>
          <span>Skillshare</span>
       </a>
-      <a href="https://www.open.edu/openlearn/profiles/zs316476" class="button" onclick="handleClick(this, 'Open University')">
+      <a href="https://www.open.edu/openlearn/profiles/zs316476" class="button openuniversity" onclick="handleClick(this, 'Open University')">
          <div class="icon"><i class="fas fa-university"></i></div>
          <span>Open University</span>
       </a>
@@ -194,7 +194,6 @@
          if (!button.dataset.clicked) {
             // First click: Change background and show name
             button.dataset.clicked = true;
-            button.style.backgroundColor = "#333"; // Change to a selected color
             button.querySelector('span').style.display = "inline-block"; // Show platform name
          } else {
             // Second click: Open the link
