--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
          transition: all 0.3s ease-out;
          text-align: center;
          overflow: hidden;
+         position: relative;
       }
 
       .button .icon {
@@ -61,6 +62,8 @@
          font-size: 16px;
          color: #fff;
          line-height: 60px;
+         position: absolute;
+         left: 70px;
          transition: all 0.3s ease-out;
       }
 
@@ -70,11 +73,6 @@
 
       .button:hover span {
          display: inline-block;
-      }
-
-      .button .icon img {
-         height: 25px;
-         vertical-align: middle;
       }
 
       /* Social Media Colors (real colors) */
@@ -124,53 +122,53 @@
 <body>
    <div class="wrapper">
       <!-- Social Media Buttons -->
-      <a href="https://www.instagram.com/mnmyounus/" class="button instagram" onclick="handleClick(this, 'Instagram')">
+      <a href="https://www.instagram.com/mnmyounus/" class="button instagram" onclick="handleClick(this, 'Instagram', 'https://www.instagram.com/mnmyounus/')">
          <div class="icon"><i class="fab fa-instagram"></i></div>
          <span>Instagram</span>
       </a>
-      <a href="https://facebook.com/" class="button facebook" onclick="handleClick(this, 'Facebook')">
+      <a href="https://facebook.com/" class="button facebook" onclick="handleClick(this, 'Facebook', 'https://facebook.com/')">
          <div class="icon"><i class="fab fa-facebook-f"></i></div>
          <span>Facebook</span>
       </a>
-      <a href="https://x.com/mnmyounus" class="button twitter" onclick="handleClick(this, 'Twitter')">
+      <a href="https://x.com/mnmyounus" class="button twitter" onclick="handleClick(this, 'Twitter', 'https://x.com/mnmyounus')">
          <div class="icon"><i class="fab fa-twitter"></i></div>
          <span>Twitter</span>
       </a>
-      <a href="https://github.com/mnmyounus" class="button github" onclick="handleClick(this, 'GitHub')">
+      <a href="https://github.com/mnmyounus" class="button github" onclick="handleClick(this, 'GitHub', 'https://github.com/mnmyounus')">
          <div class="icon"><i class="fab fa-github"></i></div>
          <span>GitHub</span>
       </a>
-      <a href="https://www.snapchat.com/add/mnmyounus" class="button snapchat" onclick="handleClick(this, 'Snapchat')">
+      <a href="https://www.snapchat.com/add/mnmyounus" class="button snapchat" onclick="handleClick(this, 'Snapchat', 'https://www.snapchat.com/add/mnmyounus')">
          <div class="icon"><i class="fab fa-snapchat"></i></div>
          <span>Snapchat</span>
       </a>
-      <a href="https://orcid.org/0009-0003-4555-5683" class="button orcid" onclick="handleClick(this, 'ORCID')">
+      <a href="https://orcid.org/0009-0003-4555-5683" class="button orcid" onclick="handleClick(this, 'ORCID', 'https://orcid.org/0009-0003-4555-5683')">
          <div class="icon"><i class="fas fa-id-card"></i></div>
          <span>ORCID</span>
       </a>
-      <a href="https://www.tiktok.com/@mnmyounus" class="button tiktok" onclick="handleClick(this, 'TikTok')">
+      <a href="https://www.tiktok.com/@mnmyounus" class="button tiktok" onclick="handleClick(this, 'TikTok', 'https://www.tiktok.com/@mnmyounus')">
          <div class="icon"><i class="fab fa-tiktok"></i></div>
          <span>TikTok</span>
       </a>
-      <a href="https://www.tumblr.com/mnmyounus" class="button tumblr" onclick="handleClick(this, 'Tumblr')">
+      <a href="https://www.tumblr.com/mnmyounus" class="button tumblr" onclick="handleClick(this, 'Tumblr', 'https://www.tumblr.com/mnmyounus')">
          <div class="icon"><i class="fab fa-tumblr"></i></div>
          <span>Tumblr</span>
       </a>
-      <a href="https://www.blogger.com/profile/00802157145964760570" class="button blogger" onclick="handleClick(this, 'Blogger')">
+      <a href="https://www.blogger.com/profile/00802157145964760570" class="button blogger" onclick="handleClick(this, 'Blogger', 'https://www.blogger.com/profile/00802157145964760570')">
          <div class="icon"><i class="fab fa-blogger"></i></div>
          <span>Blogger</span>
       </a>
-      <a href="https://www.threads.net/@mnmyounus" class="button threads" onclick="handleClick(this, 'Threads')">
+      <a href="https://www.threads.net/@mnmyounus" class="button threads" onclick="handleClick(this, 'Threads', 'https://www.threads.net/@mnmyounus')">
          <div class="icon">
             <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Threads_app_logo.png" alt="Threads Logo" />
          </div>
          <span>Threads</span>
       </a>
-      <a href="https://dev.to/mnmyounus" class="button devto" onclick="handleClick(this, 'Dev.to')">
+      <a href="https://dev.to/mnmyounus" class="button devto" onclick="handleClick(this, 'Dev.to', 'https://dev.to/mnmyounus')">
          <div class="icon"><i class="fab fa-dev"></i></div>
          <span>Dev.to</span>
       </a>
-      <a href="https://pinterest.com/mnmyounus1" class="button pinterest" onclick="handleClick(this, 'Pinterest')">
+      <a href="https://pinterest.com/mnmyounus1" class="button pinterest" onclick="handleClick(this, 'Pinterest', 'https://pinterest.com/mnmyounus1')">
          <div class="icon"><i class="fab fa-pinterest"></i></div>
          <span>Pinterest</span>
       </a>
@@ -178,26 +176,28 @@
 
    <!-- Certificates Section -->
    <div class="certificates-wrapper">
-      <!-- Certificates Buttons -->
-      <a href="https://www.skillshare.com/en/user/mnmyounus" class="button skillshare" onclick="handleClick(this, 'Skillshare')">
+      <a href="https://www.skillshare.com/en/user/mnmyounus" class="button skillshare" onclick="handleClick(this, 'Skillshare', 'https://www.skillshare.com/en/user/mnmyounus')">
          <div class="icon"><i class="fab fa-skillshare"></i></div>
          <span>Skillshare</span>
       </a>
-      <a href="https://www.open.edu/openlearn/profiles/zs316476" class="button openuniversity" onclick="handleClick(this, 'Open University')">
+      <a href="https://www.open.edu/openlearn/profiles/zs316476" class="button openuniversity" onclick="handleClick(this, 'Open University', 'https://www.open.edu/openlearn/profiles/zs316476')">
          <div class="icon"><i class="fas fa-university"></i></div>
          <span>Open University</span>
       </a>
    </div>
 
    <script>
-      function handleClick(button, platformName) {
-         if (!button.dataset.clicked) {
-            // First click: Change background and show name
-            button.dataset.clicked = true;
-            button.querySelector('span').style.display = "inline-block"; // Show platform name
+      let clicked = false;
+
+      function handleClick(button, platformName, url) {
+         if (clicked) {
+            window.open(url, "_blank");
+            clicked = false;
          } else {
-            // Second click: Open the link
-            window.open(button.href, '_blank');
+            button.style.backgroundColor = getComputedStyle(button).backgroundColor;
+            button.querySelector("span").style.display = "inline-block";
+            button.querySelector("span").innerText = platformName;
+            clicked = true;
          }
       }
    </script>
