--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Social Media Icons | Mnmyounus</title>
+   <title>Social Media Icons</title>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    <style>
       @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
@@ -53,8 +53,9 @@
          height: 100%;
          width: 100%;
          line-height: 60px;
-         transition: all 0.3s ease-out;
          font-size: 25px;
+         color: #000;
+         transition: all 0.3s ease-out;
       }
 
       .button span {
@@ -89,20 +90,6 @@
       .button.devto { background: #BD081C; }
       .button.pinterest { background: #F50057; }
 
-      /* Certificates Section */
-      .certificates-wrapper {
-         display: flex;
-         flex-wrap: wrap;
-         justify-content: center;
-         width: 90%;
-         max-width: 800px;
-         margin-top: 40px;
-      }
-
-      /* Certificates Colors */
-      .button.skillshare { background: #39A2DB; } /* Skillshare */
-      .button.openuniversity { background: #EE6F57; } /* Open University */
-
       /* Responsive Design */
       @media (max-width: 768px) {
          .button {
@@ -122,84 +109,79 @@
 <body>
    <div class="wrapper">
       <!-- Social Media Buttons -->
-      <a href="https://www.instagram.com/mnmyounus/" class="button instagram" onclick="handleClick(this, 'Instagram', 'https://www.instagram.com/mnmyounus/')">
+      <a href="#" class="button instagram" data-name="Instagram" data-url="https://www.instagram.com/mnmyounus/" onclick="handleClick(this)">
          <div class="icon"><i class="fab fa-instagram"></i></div>
          <span>Instagram</span>
       </a>
-      <a href="https://facebook.com/" class="button facebook" onclick="handleClick(this, 'Facebook', 'https://facebook.com/')">
+      <a href="#" class="button facebook" data-name="Facebook" data-url="https://facebook.com/" onclick="handleClick(this)">
          <div class="icon"><i class="fab fa-facebook-f"></i></div>
          <span>Facebook</span>
       </a>
-      <a href="https://x.com/mnmyounus" class="button twitter" onclick="handleClick(this, 'Twitter', 'https://x.com/mnmyounus')">
+      <a href="#" class="button twitter" data-name="Twitter" data-url="https://x.com/mnmyounus" onclick="handleClick(this)">
          <div class="icon"><i class="fab fa-twitter"></i></div>
          <span>Twitter</span>
       </a>
-      <a href="https://github.com/mnmyounus" class="button github" onclick="handleClick(this, 'GitHub', 'https://github.com/mnmyounus')">
+      <a href="#" class="button github" data-name="GitHub" data-url="https://github.com/mnmyounus" onclick="handleClick(this)">
          <div class="icon"><i class="fab fa-github"></i></div>
          <span>GitHub</span>
       </a>
-      <a href="https://www.snapchat.com/add/mnmyounus" class="button snapchat" onclick="handleClick(this, 'Snapchat', 'https://www.snapchat.com/add/mnmyounus')">
+      <a href="#" class="button snapchat" data-name="Snapchat" data-url="https://www.snapchat.com/add/mnmyounus" onclick="handleClick(this)">
          <div class="icon"><i class="fab fa-snapchat"></i></div>
          <span>Snapchat</span>
       </a>
-      <a href="https://orcid.org/0009-0003-4555-5683" class="button orcid" onclick="handleClick(this, 'ORCID', 'https://orcid.org/0009-0003-4555-5683')">
+      <a href="#" class="button orcid" data-name="ORCID" data-url="https://orcid.org/0009-0003-4555-5683" onclick="handleClick(this)">
          <div class="icon"><i class="fas fa-id-card"></i></div>
          <span>ORCID</span>
       </a>
-      <a href="https://www.tiktok.com/@mnmyounus" class="button tiktok" onclick="handleClick(this, 'TikTok', 'https://www.tiktok.com/@mnmyounus')">
+      <a href="#" class="button tiktok" data-name="TikTok" data-url="https://www.tiktok.com/@mnmyounus" onclick="handleClick(this)">
          <div class="icon"><i class="fab fa-tiktok"></i></div>
          <span>TikTok</span>
       </a>
-      <a href="https://www.tumblr.com/mnmyounus" class="button tumblr" onclick="handleClick(this, 'Tumblr', 'https://www.tumblr.com/mnmyounus')">
+      <a href="#" class="button tumblr" data-name="Tumblr" data-url="https://www.tumblr.com/mnmyounus" onclick="handleClick(this)">
          <div class="icon"><i class="fab fa-tumblr"></i></div>
          <span>Tumblr</span>
       </a>
-      <a href="https://www.blogger.com/profile/00802157145964760570" class="button blogger" onclick="handleClick(this, 'Blogger', 'https://www.blogger.com/profile/00802157145964760570')">
+      <a href="#" class="button blogger" data-name="Blogger" data-url="https://www.blogger.com/profile/00802157145964760570" onclick="handleClick(this)">
          <div class="icon"><i class="fab fa-blogger"></i></div>
          <span>Blogger</span>
       </a>
-      <a href="https://www.threads.net/@mnmyounus" class="button threads" onclick="handleClick(this, 'Threads', 'https://www.threads.net/@mnmyounus')">
+      <a href="#" class="button threads" data-name="Threads" data-url="https://www.threads.net/@mnmyounus" onclick="handleClick(this)">
          <div class="icon">
             <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Threads_app_logo.png" alt="Threads Logo" />
          </div>
          <span>Threads</span>
       </a>
-      <a href="https://dev.to/mnmyounus" class="button devto" onclick="handleClick(this, 'Dev.to', 'https://dev.to/mnmyounus')">
+      <a href="#" class="button devto" data-name="Dev.to" data-url="https://dev.to/mnmyounus" onclick="handleClick(this)">
          <div class="icon"><i class="fab fa-dev"></i></div>
          <span>Dev.to</span>
       </a>
-      <a href="https://pinterest.com/mnmyounus1" class="button pinterest" onclick="handleClick(this, 'Pinterest', 'https://pinterest.com/mnmyounus1')">
+      <a href="#" class="button pinterest" data-name="Pinterest" data-url="https://pinterest.com/mnmyounus1" onclick="handleClick(this)">
          <div class="icon"><i class="fab fa-pinterest"></i></div>
          <span>Pinterest</span>
-      </a>
-   </div>
-
-   <!-- Certificates Section -->
-   <div class="certificates-wrapper">
-      <a href="https://www.skillshare.com/en/user/mnmyounus" class="button skillshare" onclick="handleClick(this, 'Skillshare', 'https://www.skillshare.com/en/user/mnmyounus')">
-         <div class="icon"><i class="fab fa-skillshare"></i></div>
-         <span>Skillshare</span>
-      </a>
-      <a href="https://www.open.edu/openlearn/profiles/zs316476" class="button openuniversity" onclick="handleClick(this, 'Open University', 'https://www.open.edu/openlearn/profiles/zs316476')">
-         <div class="icon"><i class="fas fa-university"></i></div>
-         <span>Open University</span>
       </a>
    </div>
 
    <script>
       let clicked = false;
 
-      function handleClick(button, platformName, url) {
-         if (clicked) {
-            window.open(url, "_blank");
-            clicked = false;
-         } else {
+      function handleClick(button) {
+         const platformName = button.getAttribute('data-name');
+         const platformUrl = button.getAttribute('data-url');
+
+         // First click: Show name and color the button
+         if (!clicked) {
             button.style.backgroundColor = getComputedStyle(button).backgroundColor;
-            button.querySelector("span").style.display = "inline-block";
-            button.querySelector("span").innerText = platformName;
+            button.querySelector("span").style.display = "inline-block";  // Show the platform name
+            button.querySelector("span").innerText = platformName;  // Set the name
             clicked = true;
+         } 
+         // Second click: Open the link in a new tab
+         else {
+            window.open(platformUrl, "_blank");
+            clicked = false;  // Reset clicked state for the next time
          }
       }
    </script>
 </body>
-</html>
+         </html>
+            
