--- a/index.html
+++ b/index.html
@@ -142,5 +142,7 @@
       <a href="https://www.open.edu/openlearn/profiles/zs316476">OpenLearn Profile</a>
    </div>
 </body>
-                                                                                     </html>
-                                                                                     
+   <footer>
+   <p>© 2024 Mnmyounus. All Rights Reserved.
+   </p>
+   </footer>                                                                        </html>
