--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ a:nth-child(21) { color: #D44638; } /* Email - Red */
 a:nth-child(22) { color: #0088CC; } /* Telegram - Light Blue */
 a:nth-child(23) { color: #25D366; } /* WhatsApp - Green */
 a:nth-child(24) { color: #000000; } /* Wikipedia - Black */
+      footer { text-align: center; background: #333; color: #fff; padding: 15px 0; margin-top: 20px; font-size: 14px; }
+      footer a { color: #fff; text-decoration: none; font-weight: 600; }
+      footer a:hover { text-decoration: underline; }
    </style>
 </head>
 <body>
@@ -75,5 +78,8 @@ a:nth-child(24) { color: #000000; } /* Wikipedia - Black */
 
       </div>
    </div>
+    <footer>
+      © 2024 Mnmyounus. All Rights Reserved. | <a href="#">Privacy Policy</a>
+   </footer>
 </body>
 </html>
