--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ a:nth-child(24) { color: #000000; } /* Wikipedia - Black */
       <div class="social-links">
          <a href="https://500px.com/mnmyounus"><i class="fab fa-500px"></i> 500px</a>
          <a href="https://open.spotify.com/user/mnmyounus"><i class="fab fa-spotify"></i> Spotify</a>
-         <a href="https://facebook.com/mnmyounus"><i class="fab fa-facebook"></i> Facebook</a>
+         <a href="https://www.facebook.com/profile.php?id=61571412697217"><i class="fab fa-facebook"></i> Facebook</a>
          <a href="https://www.instagram.com/mnmyounus/"><i class="fab fa-instagram"></i> Instagram</a>
          <a href="https://www.linkedin.com/in/mnmyounus/"><i class="fab fa-linkedin"></i> LinkedIn</a>
          <a href="https://pinterest.com/mnmyounus1"><i class="fab fa-pinterest"></i> Pinterest</a>
-         <a href="https://www.youtube.com/mnmyounus"><i class="fab fa-youtube"></i> YouTube</a>
+         <a href="https://www.youtube.com/@mnmyounus"><i class="fab fa-youtube"></i> YouTube</a>
          <a href="https://twitter.com/mnmyounus"><i class="fab fa-twitter"></i> Twitter</a>
          <a href="https://www.reddit.com/user/mnmyounus"><i class="fab fa-reddit"></i> Reddit</a>
          <a href="https://www.tiktok.com/@mnmyounus"><i class="fab fa-tiktok"></i> TikTok</a>
